# financial-analyst-qa-bot-RAG-project

./: .gitignore  QUICK_START.md  README.md  demo.py  prototype.ipynb  pyproject.toml  requirements.txt  setup_api_key.py  test_document_processing.py  test_system.py
src/: cli.py  config.py  document_processor.py  financial_qa_bot.py  rag_pipeline.py  vector_store.py
